Apply project-wide source code reformatting