@@ -129,7 +129,7 @@ public class Validator {
         step1Request.setReceiverPartyId(receiverPartyId);
         step1Request.setAmount(new BigDecimal(amount));
         step1Request.setExpiresAt(OffsetDateTime.now().plusMinutes(3));
-        step1Request.setNonce(new Long(nonce));
+        step1Request.setNonce(Long.valueOf(nonce));
         step1Request.setVerboseHashing(true); // discouraged in production use
 
         System.out.println("\nprepare acceptance of external party setup proposal request: " + step1Request.toJson() + "\n");
